-- ============================================================================
-- VoltHub CSMS — V001 core schema (Oracle 23ai, user VOLTHUB)
-- Masterplan Part V / VII: 25 relations, BCNF per docs/05-06
-- Run: sql volthub/<pwd>@localhost/freepdb1 @V001__core_schema.sql
-- ============================================================================

-- ---- lookups ---------------------------------------------------------------
CREATE TABLE connector_state (
  state_code VARCHAR2(16) PRIMARY KEY,
  description VARCHAR2(200) NOT NULL,
  is_available CHAR(1) DEFAULT 'N' NOT NULL CHECK (is_available IN ('Y','N'))
);
INSERT INTO connector_state VALUES ('AVAILABLE','Connector free for booking','Y');
INSERT INTO connector_state VALUES ('RESERVED','Held by a reservation','N');
INSERT INTO connector_state VALUES ('OCCUPIED','Active charging session','N');
INSERT INTO connector_state VALUES ('FAULTED','Fault reported, unbookable','N');
INSERT INTO connector_state VALUES ('OFFLINE','No heartbeat / unreachable','N');
INSERT INTO connector_state VALUES ('UNAVAILABLE','Operator disabled','N');

CREATE TABLE session_state (
  state_code VARCHAR2(16) PRIMARY KEY,
  description VARCHAR2(200) NOT NULL,
  is_terminal CHAR(1) DEFAULT 'N' NOT NULL CHECK (is_terminal IN ('Y','N'))
);
INSERT INTO session_state VALUES ('RESERVED','Reservation converted, awaiting plug-in','N');
INSERT INTO session_state VALUES ('PREPARING','Plugged in, authorized, cable check','N');
INSERT INTO session_state VALUES ('CHARGING','Energy flowing','N');
INSERT INTO session_state VALUES ('SUSPENDED','Paused by vehicle or operator','N');
INSERT INTO session_state VALUES ('COMPLETED','Stopped normally, awaiting billing','Y');
INSERT INTO session_state VALUES ('CANCELLED','Cancelled before energy flow','Y');
INSERT INTO session_state VALUES ('FAILED','Fault / auth failure mid-session','Y');

CREATE TABLE reservation_state (
  state_code VARCHAR2(16) PRIMARY KEY,
  description VARCHAR2(200) NOT NULL
);
INSERT INTO reservation_state VALUES ('BOOKED','Active hold on connector');
INSERT INTO reservation_state VALUES ('CONVERTED','Converted into a charging session');
INSERT INTO reservation_state VALUES ('CANCELLED','Cancelled by user/operator before start');
INSERT INTO reservation_state VALUES ('EXPIRED','No-show, auto-expired by sweeper');

CREATE TABLE connector_standard (
  standard_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  code VARCHAR2(24) UNIQUE NOT NULL,
  display_name VARCHAR2(80) NOT NULL,
  max_typical_kw NUMBER(6,1) NOT NULL CHECK (max_typical_kw > 0)
);
INSERT INTO connector_standard (code, display_name, max_typical_kw) VALUES ('TYPE2','Type 2 AC',22);
INSERT INTO connector_standard (code, display_name, max_typical_kw) VALUES ('CCS2','CCS Combo 2 DC',150);
INSERT INTO connector_standard (code, display_name, max_typical_kw) VALUES ('CHADEMO','CHAdeMO DC',62.5);
INSERT INTO connector_standard (code, display_name, max_typical_kw) VALUES ('BHARAT_AC001','Bharat AC-001',3.3);
INSERT INTO connector_standard (code, display_name, max_typical_kw) VALUES ('BHARAT_DC001','Bharat DC-001',15);

-- ---- identity / users ------------------------------------------------------
CREATE TABLE app_user (
  user_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  email VARCHAR2(255) UNIQUE NOT NULL,
  password_hash VARCHAR2(512) NOT NULL,
  full_name VARCHAR2(160) NOT NULL,
  phone VARCHAR2(32),
  role VARCHAR2(16) DEFAULT 'DRIVER' NOT NULL CHECK (role IN ('DRIVER','OPERATOR','ADMIN')),
  status VARCHAR2(16) DEFAULT 'ACTIVE' NOT NULL CHECK (status IN ('ACTIVE','SUSPENDED')),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT ck_user_email_fmt CHECK (email LIKE '%@%.%')
);

CREATE TABLE wallet_account (
  user_id NUMBER PRIMARY KEY REFERENCES app_user(user_id),
  balance NUMBER(12,2) DEFAULT 0 NOT NULL CHECK (balance >= 0),
  currency CHAR(3) DEFAULT 'INR' NOT NULL,
  updated_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE wallet_ledger (
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  seq_no NUMBER NOT NULL,
  kind VARCHAR2(16) NOT NULL CHECK (kind IN ('TOPUP','PAYMENT','REFUND','ADJUSTMENT')),
  amount NUMBER(12,2) NOT NULL CHECK (amount <> 0),
  balance_after NUMBER(12,2) NOT NULL CHECK (balance_after >= 0),
  payment_id NUMBER,
  note VARCHAR2(400),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_wallet_ledger PRIMARY KEY (user_id, seq_no)
);

CREATE TABLE vehicle (
  vehicle_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  nickname VARCHAR2(80),
  make VARCHAR2(80) NOT NULL,
  model VARCHAR2(80) NOT NULL,
  battery_kwh NUMBER(6,2) NOT NULL CHECK (battery_kwh BETWEEN 5 AND 250),
  is_default CHAR(1) DEFAULT 'N' NOT NULL CHECK (is_default IN ('Y','N')),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE vehicle_standard_support (
  vehicle_id NUMBER NOT NULL REFERENCES vehicle(vehicle_id),
  standard_id NUMBER NOT NULL REFERENCES connector_standard(standard_id),
  CONSTRAINT pk_vehicle_std PRIMARY KEY (vehicle_id, standard_id)
);

-- ---- stations / hardware ---------------------------------------------------
CREATE TABLE station (
  station_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  name VARCHAR2(160) NOT NULL,
  latitude NUMBER(9,6) NOT NULL CHECK (latitude BETWEEN 6 AND 37),
  longitude NUMBER(9,6) NOT NULL CHECK (longitude BETWEEN 68 AND 98),
  address_line VARCHAR2(300) NOT NULL,
  city VARCHAR2(80) NOT NULL,
  state VARCHAR2(80) NOT NULL,
  pincode VARCHAR2(12),
  status VARCHAR2(16) DEFAULT 'ACTIVE' NOT NULL CHECK (status IN ('ACTIVE','INACTIVE')),
  operator_id NUMBER REFERENCES app_user(user_id),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE station_amenity (
  station_id NUMBER NOT NULL REFERENCES station(station_id),
  amenity VARCHAR2(24) NOT NULL
    CHECK (amenity IN ('CAFE','RESTROOM','WIFI','PARKING','SHOP','CANOPY','CCTV')),
  CONSTRAINT pk_station_amenity PRIMARY KEY (station_id, amenity)
);

CREATE TABLE charge_point (
  cp_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  station_id NUMBER NOT NULL REFERENCES station(station_id),
  ocpp_identity VARCHAR2(64) UNIQUE NOT NULL,
  vendor VARCHAR2(80) NOT NULL,
  model VARCHAR2(80) NOT NULL,
  firmware_version VARCHAR2(40),
  status VARCHAR2(16) DEFAULT 'ONLINE' NOT NULL CHECK (status IN ('ONLINE','OFFLINE','FAULTED')),
  last_boot_at TIMESTAMP(6),
  last_seen_at TIMESTAMP(6)
);

-- Weak entity: existence-dependent on charge_point, partial key connector_no.
-- Composite PK (cp_id, connector_no). Children use encoded handle
-- connector_ref 'cpId:connectorNo' for uniform single-column FK.
CREATE TABLE connector (
  cp_id NUMBER NOT NULL REFERENCES charge_point(cp_id),
  connector_no NUMBER(2) NOT NULL CHECK (connector_no BETWEEN 1 AND 8),
  standard_id NUMBER NOT NULL REFERENCES connector_standard(standard_id),
  max_power_kw NUMBER(6,1) NOT NULL CHECK (max_power_kw BETWEEN 3 AND 400),
  status VARCHAR2(16) DEFAULT 'AVAILABLE' NOT NULL REFERENCES connector_state(state_code),
  last_state_change_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT pk_connector PRIMARY KEY (cp_id, connector_no)
);

-- ---- tariffs (versioned, ToU) ----------------------------------------------
CREATE TABLE tariff_plan (
  plan_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  group_id NUMBER NOT NULL,
  version_no NUMBER NOT NULL CHECK (version_no >= 1),
  name VARCHAR2(120) NOT NULL,
  currency CHAR(3) DEFAULT 'INR' NOT NULL,
  session_fee NUMBER(8,2) DEFAULT 0 NOT NULL CHECK (session_fee >= 0),
  idle_fee_per_30min NUMBER(8,2) DEFAULT 0 NOT NULL CHECK (idle_fee_per_30min >= 0),
  active_from TIMESTAMP(6) NOT NULL,
  active_to TIMESTAMP(6),
  supersedes_plan_id NUMBER REFERENCES tariff_plan(plan_id),
  created_by NUMBER REFERENCES app_user(user_id),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT uq_plan_group_ver UNIQUE (group_id, version_no),
  CONSTRAINT ck_plan_window CHECK (active_to IS NULL OR active_to > active_from)
);

CREATE TABLE tariff_band (
  band_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  plan_id NUMBER NOT NULL REFERENCES tariff_plan(plan_id),
  day_scope VARCHAR2(12) DEFAULT 'ALL' NOT NULL CHECK (day_scope IN ('ALL','WEEKDAY','WEEKEND')),
  start_time TIMESTAMP(0) NOT NULL,
  end_time TIMESTAMP(0) NOT NULL,
  price_per_kwh NUMBER(8,2) NOT NULL CHECK (price_per_kwh > 0),
  CONSTRAINT uq_band_slot UNIQUE (plan_id, day_scope, start_time),
  CONSTRAINT ck_band_window CHECK (end_time > start_time)
);

-- ---- reservations / sessions / metering ------------------------------------
CREATE TABLE reservation (
  reservation_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  connector_ref VARCHAR2(72) NOT NULL,
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  vehicle_id NUMBER REFERENCES vehicle(vehicle_id),
  start_at TIMESTAMP(6) NOT NULL,
  end_at TIMESTAMP(6) NOT NULL,
  status VARCHAR2(16) DEFAULT 'BOOKED' NOT NULL REFERENCES reservation_state(state_code),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  CONSTRAINT ck_res_window CHECK (end_at > start_at)
);

CREATE TABLE charging_session (
  session_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  vehicle_id NUMBER REFERENCES vehicle(vehicle_id),
  reservation_id NUMBER UNIQUE REFERENCES reservation(reservation_id),
  connector_ref VARCHAR2(72) NOT NULL,
  tariff_plan_id NUMBER NOT NULL REFERENCES tariff_plan(plan_id),
  id_tag VARCHAR2(64),
  state VARCHAR2(16) DEFAULT 'RESERVED' NOT NULL REFERENCES session_state(state_code),
  billing_state VARCHAR2(16) DEFAULT 'UNBILLED' NOT NULL
    CHECK (billing_state IN ('UNBILLED','BILLED','FAILED','WAIVED')),
  started_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  ended_at TIMESTAMP(6),
  start_meter_kwh NUMBER(10,3) DEFAULT 0 NOT NULL CHECK (start_meter_kwh >= 0),
  end_meter_kwh NUMBER(10,3) CHECK (end_meter_kwh IS NULL OR end_meter_kwh >= 0),
  energy_kwh NUMBER(10,3),
  stop_reason VARCHAR2(80),
  CONSTRAINT ck_session_window CHECK (ended_at IS NULL OR ended_at >= started_at)
);

-- Weak entity: logical key (session_id, seq_no).
CREATE TABLE meter_reading (
  session_id NUMBER NOT NULL REFERENCES charging_session(session_id),
  seq_no NUMBER NOT NULL CHECK (seq_no >= 1),
  taken_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  meter_kwh NUMBER(10,3) NOT NULL CHECK (meter_kwh >= 0),
  power_kw NUMBER(7,2),
  voltage_v NUMBER(6,1),
  current_a NUMBER(6,1),
  source VARCHAR2(16) DEFAULT 'OCPP' NOT NULL CHECK (source IN ('OCPP','SYNTHETIC')),
  CONSTRAINT pk_meter_reading PRIMARY KEY (session_id, seq_no)
);

-- ---- billing ---------------------------------------------------------------
CREATE TABLE invoice (
  invoice_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  session_id NUMBER UNIQUE NOT NULL REFERENCES charging_session(session_id),
  tariff_plan_id NUMBER NOT NULL REFERENCES tariff_plan(plan_id),
  status VARCHAR2(16) DEFAULT 'DUE' NOT NULL CHECK (status IN ('DUE','PAID','FAILED','VOID')),
  total NUMBER(12,2) NOT NULL CHECK (total >= 0),
  currency CHAR(3) DEFAULT 'INR' NOT NULL,
  issued_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE invoice_line (
  invoice_id NUMBER NOT NULL REFERENCES invoice(invoice_id),
  line_no NUMBER NOT NULL CHECK (line_no >= 1),
  kind VARCHAR2(16) NOT NULL CHECK (kind IN ('ENERGY','SESSION_FEE','IDLE_FEE','TAX','ADJUSTMENT')),
  description VARCHAR2(300) NOT NULL,
  quantity NUMBER(10,3),
  unit VARCHAR2(16),
  unit_price NUMBER(10,2),
  amount NUMBER(12,2) NOT NULL CHECK (amount >= 0),
  CONSTRAINT pk_invoice_line PRIMARY KEY (invoice_id, line_no)
);

CREATE TABLE payment (
  payment_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  invoice_id NUMBER NOT NULL REFERENCES invoice(invoice_id),
  amount NUMBER(12,2) NOT NULL CHECK (amount > 0),
  method VARCHAR2(16) DEFAULT 'WALLET' NOT NULL CHECK (method IN ('WALLET')),
  status VARCHAR2(16) NOT NULL CHECK (status IN ('SUCCESS','FAILED')),
  reference VARCHAR2(120),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

-- ---- operations ------------------------------------------------------------
CREATE TABLE fault (
  fault_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  connector_ref VARCHAR2(72),
  cp_id NUMBER REFERENCES charge_point(cp_id),
  error_code VARCHAR2(40) NOT NULL,
  severity VARCHAR2(16) DEFAULT 'WARN' NOT NULL CHECK (severity IN ('INFO','WARN','CRITICAL')),
  source VARCHAR2(16) DEFAULT 'OCPP' NOT NULL CHECK (source IN ('OCPP','MANUAL')),
  description VARCHAR2(500),
  reported_by NUMBER REFERENCES app_user(user_id),
  reported_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  cleared_at TIMESTAMP(6),
  CONSTRAINT ck_fault_target CHECK (connector_ref IS NOT NULL OR cp_id IS NOT NULL)
);

CREATE TABLE maintenance_record (
  record_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  fault_id NUMBER UNIQUE REFERENCES fault(fault_id),
  performed_by NUMBER REFERENCES app_user(user_id),
  work_type VARCHAR2(40) NOT NULL,
  description VARCHAR2(1000) NOT NULL,
  cost NUMBER(10,2) DEFAULT 0 NOT NULL CHECK (cost >= 0),
  started_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  resolved_at TIMESTAMP(6),
  resolution VARCHAR2(1000)
);

CREATE TABLE review (
  review_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  session_id NUMBER UNIQUE NOT NULL REFERENCES charging_session(session_id),
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  rating NUMBER(1) NOT NULL CHECK (rating BETWEEN 1 AND 5),
  comment_text VARCHAR2(1000),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE notification (
  notification_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  kind VARCHAR2(40) NOT NULL,
  title VARCHAR2(160) NOT NULL,
  payload CLOB CHECK (payload IS JSON),
  is_read CHAR(1) DEFAULT 'N' NOT NULL CHECK (is_read IN ('Y','N')),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

CREATE TABLE audit_log (
  audit_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  actor_user_id NUMBER REFERENCES app_user(user_id),
  entity_name VARCHAR2(64) NOT NULL,
  entity_id VARCHAR2(72) NOT NULL,
  action VARCHAR2(24) NOT NULL,
  old_value CLOB CHECK (old_value IS JSON),
  new_value CLOB CHECK (new_value IS JSON),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL
);

-- Outbox: atomic with OLTP write, relayed to TimescaleDB (DA3).
CREATE TABLE outbox_event (
  event_id NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY PRIMARY KEY,
  kind VARCHAR2(32) NOT NULL CHECK (kind IN ('METER_TICK','CONNECTOR_STATE','SESSION_EVENT')),
  dedupe_key VARCHAR2(160) UNIQUE NOT NULL,
  payload CLOB NOT NULL CHECK (payload IS JSON),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  processed_at TIMESTAMP(6)
);

CREATE TABLE idempotency_key (
  key_value VARCHAR2(120) PRIMARY KEY,
  user_id NUMBER REFERENCES app_user(user_id),
  method VARCHAR2(12) NOT NULL,
  path VARCHAR2(300) NOT NULL,
  status_code NUMBER NOT NULL,
  response_body CLOB CHECK (response_body IS JSON),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  expires_at TIMESTAMP(6) NOT NULL
);

CREATE TABLE refresh_token (
  token_hash VARCHAR2(128) PRIMARY KEY,
  user_id NUMBER NOT NULL REFERENCES app_user(user_id),
  device_label VARCHAR2(120),
  created_at TIMESTAMP(6) DEFAULT SYSTIMESTAMP NOT NULL,
  expires_at TIMESTAMP(6) NOT NULL,
  revoked_at TIMESTAMP(6)
);

-- ---- indexes (each serves a §17 query) -------------------------------------
CREATE INDEX ix_session_user_time ON charging_session(user_id, started_at DESC);
CREATE INDEX ix_session_conn_state ON charging_session(connector_ref, state);
CREATE INDEX ix_session_started ON charging_session(started_at);
CREATE INDEX ix_res_conn_start ON reservation(connector_ref, start_at);
CREATE INDEX ix_res_user_status ON reservation(user_id, status);
CREATE INDEX ix_reading_taken ON meter_reading(taken_at);
CREATE INDEX ix_fault_open ON fault(connector_ref, cleared_at);
CREATE INDEX ix_outbox_cursor ON outbox_event(processed_at, created_at);
CREATE INDEX ix_invoice_status ON invoice(status, issued_at);
CREATE INDEX ix_station_geo ON station(city, status);
CREATE INDEX ix_audit_entity ON audit_log(entity_name, entity_id);
CREATE INDEX ix_ledger_payment ON wallet_ledger(payment_id);
COMMIT;
